HANA: HW05 minor touches

--- a/2021_22/HANA/homework-05/homework.tex
+++ b/2021_22/HANA/homework-05/homework.tex
@@ -210,7 +210,7 @@ Let
    \begin{align*}
       (2k+2)(2k+1) - 56, 
    \end{align*}
-   we note that it is stricly increasing with $k$ and we have 
+   we note that it is strictly increasing with $k$ and we have 
    \begin{align*}
       k=3 \hs\Rightarrow\hs (2k+2)(2k+1) - 56 = 0.
    \end{align*}
@@ -223,7 +223,7 @@ Let
       1 - \frac{x^2}{2!} + \frac{x^4}{4!} < 0.
    \end{align*}
    Thus all the summands in (\ref{regroup3}) are less than or equal to zero 
-   where at least one of them is non-zero. $C(x)<0$ follows. 
+   where the first one is guaranteed to be non-zero. $C(x)<0$ follows. 
    Further, we have 
    \begin{align*}
       0 < 8/5 < \sqrt{49} < \sqrt{56}
